# enum_ext

./: .gitignore  ATTR.md  CHANGELOG.md  Cargo.toml  LICENSE_MIT  PROCS.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
examples/: basic_disc.rs  basic_no_disc.rs  complex.rs  test_random_feature.rs
src/: _derive.rs  attr.rs  core.rs  lib.rs  proc.rs
tests/: attr.rs  common.rs  complex_enums.rs  derive.rs  discriminant_expr.rs  example_tests.rs  new_features_test.rs  no_std.rs  proc.rs  ui.rs
tests/ui/: attr_complex_payload_missing_discriminant.rs  attr_complex_payload_missing_discriminant.stderr  attr_invalid_int_type.rs  attr_invalid_int_type.stderr  complex_payload_missing_discriminant.rs  complex_payload_missing_discriminant.stderr  duplicate_enum_def.rs  duplicate_enum_def.stderr  enum_ext_on_struct.rs  enum_ext_on_struct.stderr  enum_extend_on_struct.rs  enum_extend_on_struct.stderr  invalid_int_type.rs  invalid_int_type.stderr
