[package]
name = "enum_ext"
version = "0.4.1"
authors = ["cubicle-jockey <cubicle-jockey@users.noreply.github.com>"]
keywords = ["enum", "macro", "discriminant", "procedural"]
categories = ["rust-patterns", "development-tools"]
repository = "https://github.com/cubicle-jockey/enum_ext"
homepage = "https://github.com/cubicle-jockey/enum_ext"
description = "procedural macro that enhances enums with additional methods and conversions"
edition = "2021"
exclude = ["target", "Cargo.lock"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "fold"] }
proc-macro2 = "1.0.95"
rand = { version = "0.9", optional = true }

[features]
default = []
random = ["rand"]
